# bwta

./: BWTA.md  BWTAAlgorithmOverview.md  BWTAManual.md  BaseLocation.md  CMakeLists.txt  Chokepoint.md  ICCupMapStatus.md  Polygon.md  ProjectHome.md  README.md  Region.md  bwta-config.in.cmake  bwta.sln  run_cmake-gui.bat
cmake/: setupeclipse.cmake
include/: BWTA.h  Region.h
include/BWTA/: BaseLocation.h  Chokepoint.h  Polygon.h  Region.h
src/: BWTA.cpp  BWTA_Result.cpp  BWTA_Result.h  BaseLocation.cpp  BaseLocationImpl.cpp  BaseLocationImpl.h  CMakeLists.txt  Chokepoint.cpp  ChokepointImpl.cpp  ChokepointImpl.h  Color.h  ConnectedComponent.cpp  ConnectedComponent.h  Globals.h  Graph.cpp  Graph.h  Heap.h  MapData.cpp  MapData.h  Node.cpp  Node.h  Polygon.cpp  Region.cpp  RegionImpl.cpp  RegionImpl.h  Resource.h  VertexData.cpp  VertexData.h  bwta.vcproj  calculate_connectivity.cpp  extract_polygons.cpp  extract_polygons.h  fastbuild.cpp  find_base_locations.cpp  find_base_locations.h  functions.h  get_voronoi_edges.cpp  load_data.cpp  load_map.cpp  pathfinding.cpp  (+3 more)
